[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/git_for_godot/history_main_screen/git_history.gd" type="Script" id=1]
[ext_resource path="res://addons/git_for_godot/icons/Modify.svg" type="Texture" id=2]
[ext_resource path="res://addons/git_for_godot/theme.tres" type="Theme" id=3]
[ext_resource path="res://addons/git_for_godot/history_main_screen/history_main_screen.gd" type="Script" id=4]
[ext_resource path="res://addons/git_for_godot/history_main_screen/settings_popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/git_for_godot/history_main_screen/basic_actions.gd" type="Script" id=6]

[node name="HistoryMainScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_vertical = 3
color = Color( 0.12549, 0.145098, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicActions" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 994.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 6 )

[node name="SpacerLeft" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_right = 392.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Fetch" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_left = 396.0
margin_right = 443.0
margin_bottom = 32.0
hint_tooltip = "Fetch from all remotes"
text = "Fetch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pull" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_left = 447.0
margin_right = 483.0
margin_bottom = 32.0
hint_tooltip = "Pull from the current branch's upstream"
text = "Pull"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Push" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_left = 487.0
margin_right = 530.0
margin_bottom = 32.0
hint_tooltip = "Push from the current branch to its upstream"
text = "Push"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpacerRight" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_left = 534.0
margin_right = 927.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Settings" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions"]
margin_left = 931.0
margin_right = 994.0
margin_bottom = 32.0
text = "Settings"

[node name="SettingsPopup" parent="ColorRect/MarginContainer/VBoxContainer/BasicActions/Settings" instance=ExtResource( 5 )]

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GitHistory" type="HSplitContainer" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 994.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Branches" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory"]
margin_right = 120.0
margin_bottom = 534.0
rect_min_size = Vector2( 120, 0 )

[node name="Commits" type="HSplitContainer" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory"]
margin_left = 128.0
margin_right = 994.0
margin_bottom = 534.0

[node name="Graph" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits"]
margin_right = 100.0
margin_bottom = 534.0
rect_min_size = Vector2( 100, 200 )

[node name="Names" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits"]
margin_left = 108.0
margin_right = 866.0
margin_bottom = 534.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 4

[node name="WIP" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits/Names"]
visible = false
margin_right = 758.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 26 )
theme = ExtResource( 3 )
color = Color( 0, 0, 0, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits/Names/WIP"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIP" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits/Names/WIP/HBoxContainer"]
margin_top = 1.0
margin_right = 34.0
margin_bottom = 23.0
text = "WIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits/Names/WIP/HBoxContainer"]
margin_left = 38.0
margin_right = 62.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Changes" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GitHistory/Commits/Names/WIP/HBoxContainer"]
margin_left = 66.0
margin_top = 1.0
margin_right = 104.0
margin_bottom = 23.0
text = "Error"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/BasicActions/Fetch" to="ColorRect/MarginContainer/VBoxContainer/BasicActions" method="_on_Fetch_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/BasicActions/Pull" to="ColorRect/MarginContainer/VBoxContainer/BasicActions" method="_on_Pull_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/BasicActions/Push" to="ColorRect/MarginContainer/VBoxContainer/BasicActions" method="_on_Push_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/BasicActions/Settings" to="ColorRect/MarginContainer/VBoxContainer/BasicActions" method="_on_Settings_pressed"]
